package delivery.factorymethod;

/** Concrete creator: creates road transport. */
public class RoadLogistics extends Logistics {

    @Override
    protected Transport createTransport() {
        return new Truck();
    }
}
